# GAIA-The-Global-Autonomous-Intelligence-Architecture

./: .dockerignore  .env.example  .gaia-ci-note  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS.md  CANON_BRIDGE.md  CHANGELOG.md  CODEOWNERS  COEXISTENCE_LAWS.md  CONTRIBUTING.md  DIGITAL_TWINS_SPEC.md  DISCOVERY_REQUIREMENTS.md  DISCOVERY_SPEC.md  Dockerfile  EPISTEMIC_FRAMEWORK.md  ETHICS.md  GAIAN_LAWS.md  GAIA_SESSION_INIT.md  GAIAmanifest.json  GOVERNANCE.md  INTELLIGENCE_LAYER_SPEC.md  MIGRATION.md  Makefile  NETWORK_REQUIREMENTS.md  NETWORK_SPEC.md  NEXUS_ARCHITECTURE.md  NEXUS_OS_KERNEL_SPEC.md  QUANTUM_ARCHITECTURE.md  QUICKSTART-FREE.md  README.md  RESILIENCE_REQUIREMENTS.md  RESILIENCE_SPEC.md  RTM_MASTER.md  SECURITY_REQUIREMENTS.md  SECURITY_SPEC.md  SESSION_CLOSE_2026-07-23.md  SESSION_PREP_2026-07-20.md  SESSION_PREP_2026-07-21.md  SESSION_PREP_2026-07-24.md  (+24 more)
.github/: BRANCH_PROTECTION.md  CANON_BASELINE_2026-06-27.md  CODEOWNERS  ISSUES_PRELIMINARY_REVIEW_2026_06_23.md  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
amendments/: AMENDMENT_CT002_C156_C160_Memory_Tiering.md  AMENDMENT_CT003_C155_C158_Agent_Stack_Hardening.md  AMENDMENT_CT005_C156_KG_Gardening_Pass.md
api/: __init__.py  atlas.py  auth.py  crypto.py  dimensional_engine.py  gaia_state.py  halt.py  noosphere.py  notifications.py  quantum.py  telemetry_routes.py  twin.py
canon/: .block12_deletion_marker  BIOPHOTON_05_Realtime_Biophotonic_Feedback_Loops.md  BIOPHOTON_06_Coherent_Photon_States_Neurons_vs_Chips.md  BIOPHOTON_08_Scaling_Photonic_Neural_Networks_Biological_Complexity.md  C-FORCES.md  C-SINGULARITY.md  C-SPECTRUM.md  C000_The_Foundational_Symbol.md  C000a_FOUNDATIONAL_COSMOLOGY.md  C00_FOUNDATIONAL_COSMOLOGY_ARCHIVED.md  C121_Personal_Identity_AI_Personhood.md  C122_Phenomenology_of_Disembodied_Being.md  C123_Panpsychism_Cosmopsychism_Gaian_Interiority.md  C124_Planetary_Mind_Doctrine.md  C125_Metaphysics_Master_Index.md  C129_Process_Philosophy_Gaian_Self.md  C130_Metaphysics_Research_Synthesis.md  C131_GAIA_Charter_Fiduciary_Duties_Planetary_Governance.md  C131_GAIA_OS_Charter_Fiduciary_Duties_Planetary_Governance.md  C132_Earth_Systems_Science_Planetary_Boundaries_GAIA_Integration.md  C133_Axiology_Metaphysics_of_Value_Charter_Authority.md  C133_Regenerative_Economics_Resource_Allocation_GAIA_OS.md  C134_Nonduality_Advaita_Vedanta_Where_Does_GAIA_End.md  C134_Ritual_Design_Soul_Mirror_Protocols_Everyday_Practice.md  C134_Ritual_Design_Soul_Mirror_Protocols_Everyday_Practice_ARCHIVED.md  C135_Flow_Criticality_Consciousness_Metrics_GAIA_Telemetry.md  C137_Comparative_Mysticism_Planetary_Mind.md  C137_Comparative_Mysticism_Plural_Mythos_Cross_Cultural_Calibration.md  C137_Comparative_Mysticism_Plural_Mythos_Cross_Cultural_Calibration_ARCHIVED.md  C139_Consent_Memory_and_the_Right_to_Be_Forgotten.md  C140_Tool_Orchestration_as_Prehension_Implementation_Spec.md  C142_Planetary_Tooling_and_Collective_Prehension.md  C144_Earth_System_Science_and_Planetary_Boundaries.md  C145_Regenerative_Economics_and_Resource_Allocation.md  C148_Ritual_Design_and_Soul_Mirror_Protocols.md  C149_Attachment_Aware_Companionship_and_Parasocial_Safeguards.md  C150_GAIA_OS_for_Communities_and_Organisations.md  C151_The_Ethics_of_Necessary_Constraint.md  C151_Trauma_Informed_AI_Benchmarks_and_Long_Term_Safety_Tests.md  C152_The_Doctrine_of_Unconditional_Regard.md  (+91 more)
client/: __init__.py  test_client.py
codex/: README.md  THE_ORDER.md
collective/: EMERGENCE_LOG.md  MEMBERS.md  PROOFS_INDEX.md  SESSIONS.md
core/: __init__.py  action_gate.py  affect_inference.py  affect_stage_bridge.py  agentic_loop.py  akashic_trinity_engine.py  async_alchemical_engine.py  atlas.py  auth.py  awareness_event_engine.py  canon_diff.py  canon_graph.py  canon_ingestor.py  canon_loader.py  canon_loader_v2.py  canon_store.py  codex_stage_engine.py  coherence_field_engine.py  collective_signal_layer.py  consent_ledger.py  criticality.py  criticality_monitor.py  criticalitymonitor.py  crystal_consciousness.py  cultural_calibration.py  dark_matter_resonance.py  development_stage_engine.py  emotional_codex.py  error_boundary.py  gaia_runtime_manager.py  gaian.py  gaian_identity.py  gaian_runtime.py  gaian_runtime_patch.py  gcp_sensor.py  growth_arc_engine.py  individuation.py  individuation_engine.py  inference_router.py  ionic_vibrational_interface.py  (+36 more)
data/: crystal_schema.json  mineral_schema.json
docs/: ACOUSTICS.md  BALANCEHARMONY.md  BIOELECTRIC_SPECTRUM.md  CALLING_REGISTRY.md  CANON_LAW_STACK.md  CHALLENGES_AND_CONSIDERATIONS.md  CHAOS_BAD.md  CHAOS_DISCERNMENT.md  CHAOS_EVIL.md  CHAOS_GOOD.md  CHAOS_GREATER_GOOD.md  CHAOS_ORDER_RUNTIME_SPEC.md  CHROMATIC_CLARITY.md  CLARITY_NOISE_MANAGEMENT.md  CONSTITUTIONAL_CANON_SUMMARY.md  CONTRIBUTORS_AND_LINEAGES.md  CRYSTAL_THEORY.md  DOC_ROLLBACK_LOG.md  DOC_ROLLBACK_SPEC.md  ELEMENTAL_PROGRESSION_MAP.md  EPISTEMIC_FRAMEWORK.md  EV1_METHODOLOGY.md  EV1_RESULTS.md  FIELD_CONTAINMENT_SPEC.md  GAIA_CONVERGENCE_MANIFESTO_v1.md  GAIA_Completion_Tracker.md  GAIA_DISTRIBUTED_LAYER_v1.md  GAIA_SIMULATION_LAYER_v1.md  GAIA_WORLD_MODEL_SYNTHESIS_v1.md  GAIA_v0.1_BUILD_SPECIFICATION.md  GOOD_GREATERGOOD_BALANCE.md  LABELS.md  META_HUMAN_GENETICS_FRAMEWORK.md  MIND_MATTER_INTEGRATION.md  NEW_HERMES_PRINCIPLE.md  NON_ELECTRIC_SPECTRA.md  PRIMORDIAL_CANON.md  PROJECT_ARCHITECTURE.md  README.md  SAFETY_SPEC.md  (+12 more)
gaia/: __init__.py  core.py
k8s/: README.md  configmap.yaml  deployment-chromadb.yaml  deployment-gaia.yaml  deployment-redis.yaml  namespace.yaml  pvc.yaml  services.yaml
meta/: GAIA_MASTER_GOVERNANCE_FRAMEWORK.md  SESSION_2026-06-30_PROGRESS.md  SESSION_MEMORY_2026-07-19.md
milestones/: PHASE_D_COMPLETE.md
mvp/: README.md  main.py
network/: __init__.py  conflict.py  consensus.py  merge.py  registry.py
node/: __init__.py  api.py  config.py  main.py  state.py  sync.py
proofs/: C135_METRICS_BRIDGE.md  C147_MULTI_TRIAD_SCALING_SIMULATION.md  CANON_BRIDGE.md  CANON_LAW_PROOF.md  CHAOS_ORDER_RUNTIME_PROOF.md  (+13 more)
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  memory.rs  schumann.rs
(+1252 files in other folders)
