[package]
name = "gaia"
version = "0.1.0"
edition = "2021"

[lib]
name = "gaia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gaia"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# libc is only needed on non-Windows targets for SIGKILL process-group kill
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

# ── Release profile — optimise for size + speed ───────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
